--- a/index.html
+++ b/index.html
@@ -494,8 +494,8 @@
           <div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
             <div class="block-18">
               <div class="text">
-				<strong class="number"> <a href="https://drive.google.com/drive/folders/1xUcLnv7TmHjX7IGRLZpkGa2x0RAyICp0?usp=sharing">1-View Here</a></strong>
-                <span>Research Paper Published</span>
+				<strong class="number"> 3 </a></strong>
+                <span>Books read</span>
               </div>
             </div>
           </div>
